# django-linkcs

./: .gitignore  .gitlab-ci.yml  README.md  README.rst  setup.cfg
linkcs/: __init__.py  apps.py  backends.py  middleware.py  models.py  urls.py  views.py
linkcs/migrations/: 0001_initial.py
linkcs/urls/: both.py  linkcs.py
